--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,8 @@
   <mat-toolbar color="primary">
     <a [routerLink]="['/']" class="logo"></a>
     <span class="example-spacer"></span>
+    <a class="links side" [routerLink]="['/map-district']" *ngIf="!user">Quartiers de Lyon</a>
+    <a class="links side" [routerLink]="['/map-touristic-area']" *ngIf="!user">Lieu Touristique</a>
     <a class="links side" [routerLink]="['/auth/login']" *ngIf="!user">Login</a>
     <div>
       <a class="links side" *ngIf="user" [matMenuTriggerFor]="menu">
