--- a/src/app/pages/map-district/map-district.component.html
+++ b/src/app/pages/map-district/map-district.component.html
@@ -1,2 +1,10 @@
 
-<div class="map" id="map"></div>
+<div style="display: flex">
+  <div class="map" id="map"></div>
+  <div class="menu">
+    <div *ngFor="let district of districArray" class="menu-item" (click)="clicOn(district)">
+    <p>{{district.properties.nom}}</p>
+    </div>
+  </div>
+</div>
+
