--- a/src/app/pages/map-district/map-district.component.scss
+++ b/src/app/pages/map-district/map-district.component.scss
@@ -1,4 +1,17 @@
 .map{
-  height: 80vh;
-  width: 80vh;
+  height: 90vh;
+  width: 80vw;
 }
+.menu{
+  height: 90vh;
+  width: 20vw;
+  padding: 20px;
+  background-color: #3F3F3F;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  color: white;
+  .menu-item{
+    cursor: pointer;
+  }
+}
+
