--- a/src/app/pages/global/global/global.component.scss
+++ b/src/app/pages/global/global/global.component.scss
@@ -15,6 +15,19 @@
   }
 }
 
+.adressList{
+  width: 100%;
+  list-style: none;
+  padding: 0;
+}
+.adressList li{
+  border-bottom: 1px solid white;
+}
+
+.adressList li:last-child{
+  border-bottom: none;
+}
+
 .menu-detail.display{
   left: 0;
 }
