--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,7 +24,7 @@ header {
       }
     }
     .mat-toolbar {
-      background: black;
+      background: #2c3e50;
     }
     .mat-icon {
       vertical-align: middle;
