--- a/src/app/pages/global/global/global.component.scss
+++ b/src/app/pages/global/global/global.component.scss
@@ -74,3 +74,15 @@
   padding: 20px;
   transition: left 0.5s;
 }
+
+.is-open{
+  color: green;
+}
+
+.is-close{
+  color: red
+}
+
+.is-orange{
+  color: orange
+}
