--- a/src/app/pages/global/global/global.component.html
+++ b/src/app/pages/global/global/global.component.html
@@ -4,10 +4,10 @@
     <div>
       <div id="helper">
       </div>
-      <div>
-        <mat-form-field style="width: 100%">
+      <div style="display: flex;align-items: center;">
+        <mat-icon svgIcon="search"></mat-icon>
+        <mat-form-field style="width: 100%;">
           <input matInput [matAutocomplete]="auto" style="width: 100%" type="text" (keyup)="onSearchKeyPress($event)">
-          <mat-icon svgIcon="search"></mat-icon>
         </mat-form-field>
       </div>
       <div>
@@ -100,7 +100,8 @@
         </ng-template>
 
         <ng-container *ngIf="detailVelov.properties.status === 'OPEN'; else elseTemplateClose">
-          <p [class.is-open]="detailVelov.properties.status === 'OPEN'">Status : {{detailVelov.properties.status === 'OPEN' ? 'Ouvert' : 'Fermé'}}
+          <p [class.is-open]="detailVelov.properties.status === 'OPEN'">Status
+            : {{detailVelov.properties.status === 'OPEN' ? 'Ouvert' : 'Fermé'}}
           </p>
         </ng-container>
         <ng-template #elseTemplateClose>
