--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,6 +22,7 @@ header {
       &.side {
         padding: 0 14px;
       }
+      text-decoration: none;
     }
     .mat-toolbar {
       background: #2c3e50;
